# Nepse_direct_Data_Extract

./: .dockerignore  .env  .gitignore  Company_listings.json  DOCKER_README.md  Dockerfile  README.md  ReportScraper.py  SERVER_DEPLOYMENT.md  auto_historic_scraper.py  auto_input_scraper.py  container_scraper.py  diagnose.sh  docker-compose.yml  docker-run-new.sh  docker-run.bat  docker-run.sh  historicdata.sqlite  import_indices_to_db.py  import_sharesansar_to_db.py  nepse-continuous.service  nepse-historic.service  nepse_historical_scraper.py  pyproject.toml  requirements.txt  run_scrapers.sh  scrape_annual_reports.py  scrape_company_listings.py  scrape_indices.py  setup-server.bat  setup-server.sh  setup-systemd-new.sh  setup-systemd.sh  sharesansar-tsp.service  sharesansar_api_daily_scraper.py  sharesansar_api_scraper.py  sharesansar_indices_daily_scraper.py  sharesansar_indices_scraper.py  sharesansar_tsp_scraper.py  simple_nepse_scraper.py  (+4 more)
Indices/: 2020_01_01.csv  2020_01_02.csv  2020_01_05.csv  2020_01_06.csv  2020_01_07.csv  2020_01_08.csv  2020_01_09.csv  2020_01_12.csv  2020_01_13.csv  2020_01_14.csv  2020_01_15.csv  2020_01_16.csv  2020_01_19.csv  2020_01_20.csv  2020_01_21.csv  2020_01_22.csv  2020_01_23.csv  2020_01_26.csv  2020_01_27.csv  2020_01_28.csv  2020_01_29.csv  2020_01_30.csv  2020_02_02.csv  2020_02_03.csv  2020_02_04.csv  2020_02_05.csv  2020_02_06.csv  2020_02_09.csv  2020_02_10.csv  2020_02_11.csv  2020_02_12.csv  2020_02_13.csv  2020_02_16.csv  2020_02_17.csv  2020_02_18.csv  2020_02_19.csv  2020_02_20.csv  2020_02_23.csv  2020_02_24.csv  (+1429 more)
(+328 files in other folders)
