[project]
name = "nepse-direct-data-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"playwright",
	"requests",
	"beautifulsoup4",
	"psycopg2-binary",
	"pandas",
	"scipy>=1.17.1",
	"numpy>=2.4.2",
	"python-dotenv>=1.2.2",
]
